k8s/imagor-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: imagor
  namespace: student-it200233
  labels:
    app: imagor
spec:
  type: ClusterIP
  selector:
    app: imagor
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
