k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dicekeeper
  namespace: student-it200233
  labels:
    app: dicekeeper
spec:
  type: ClusterIP
  selector:
    app: dicekeeper
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
